--- a/MVCapp/MVCapp.csproj
+++ b/MVCapp/MVCapp.csproj
@@ -214,6 +214,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612101707365_InitialCreate.cs" />
+    <Compile Include="Migrations\201612101707365_InitialCreate.Designer.cs">
+      <DependentUpon>201612101707365_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703271343471_Initial.cs" />
+    <Compile Include="Migrations\201703271343471_Initial.Designer.cs">
+      <DependentUpon>201703271343471_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Configuration.cs" />
@@ -332,6 +341,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612101707365_InitialCreate.resx">
+      <DependentUpon>201612101707365_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703271343471_Initial.resx">
+      <DependentUpon>201703271343471_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
