--- a/MVCapp/Web.config
+++ b/MVCapp/Web.config
@@ -49,7 +49,7 @@
     <add key="PayPalLogger" value="PayPal.Log.Log4netLogger" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
