--- a/MVCapp/packages.config
+++ b/MVCapp/packages.config
@@ -38,5 +38,6 @@
   <package id="PayPalMerchantSDK" version="2.16.204" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="RestApiSDK" version="0.11.0" targetFramework="net452" />
+  <package id="Tesseract.Net.SDK" version="1.9.2" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
